WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30290
Log mixed content warnings to console
https://bugs.webkit.org/show_bug.cgi?id=30290
Summary
Log mixed content warnings to console
Collin Jackson
Reported
2009-10-11 17:19:44 PDT
Mixed content warnings are often hard to debug, since the insecure content is buried in some obscure stylesheet or iframe. By logging information about a mixed content event as a console warning, we can make removing mixed content easier for site developers. The most important pieces of information that we can log are the URL of the page that's attempting to include insecure content, and the URL of the content. I'm not sure if the console message type should be error or warning, but I'm leaning towards warning. Chrome used a warning before the mixed content detection was moved into WebKit.
Attachments
patch
(1.72 KB, patch)
2009-10-11 17:22 PDT
,
Collin Jackson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Collin Jackson
Comment 1
2009-10-11 17:22:35 PDT
Created
attachment 41009
[details]
patch I ran the existing mixed content http tests and they passed.
Adam Barth
Comment 2
2009-10-11 19:49:50 PDT
Comment on
attachment 41009
[details]
patch Thanks Collin!
WebKit Commit Bot
Comment 3
2009-10-11 20:15:18 PDT
Comment on
attachment 41009
[details]
patch Clearing flags on attachment: 41009 Committed
r49431
: <
http://trac.webkit.org/changeset/49431
>
WebKit Commit Bot
Comment 4
2009-10-11 20:15:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug