2009-10-11  Collin Jackson  <collinj@webkit.org>

Reviewed by Adam Barth.

        Log mixed content warnings to console

        https://bugs.webkit.org/show_bug.cgi?id=30290

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::checkIfDisplayInsecureContent):
        (WebCore::FrameLoader::checkIfRunInsecureContent):

Canonical link: https://commits.webkit.org/40953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49431 268f45cc-cd09-0410-ab3c-d52691b4dbfc